fix: changed overflow to overflow-y

--- a/doc.css
+++ b/doc.css
@@ -324,7 +324,7 @@ pre {
     left: 0;
     height: 100vh;
     width: 70vw;
-    overflow: scroll;
+    overflow-y: scroll;
     background-color: white;
     transform: translateX(-100%);
     opacity: 100%;
